--- a/style.css
+++ b/style.css
@@ -6,13 +6,18 @@
 .container{
 	width: 80%;
 	margin: 0 auto;
+	overflow: hidden;
 }
 main{
 	width: 100%;
 }
-h6{
+h5{
 	color: rgb(119, 119, 119);
     font-size: 13px;
+}
+h6{
+	color: rgb(119, 119, 119);
+	font-size: 11px;
 }
 h2{
 	font-size: 30px;
@@ -195,4 +200,30 @@ h4{
 .card h4{
 	margin-top: 25px;
 	margin-bottom: 10px;
+}
+
+/* menus section */
+.menu-section{
+	padding-bottom: 5%;
+}
+.menu-area{
+	padding-top: 5%;
+	text-align: center;
+}
+.menu-area h6{
+	margin-top: 10px;
+}
+.menus{
+	overflow: hidden;
+	margin-top: 5%;
+	width: 100%;
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+	grid-template-rows: 250px;
+	grid-auto-rows: 250px;
+}
+.manus img{
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
 }
